subprojects/swen430/src/test/resources/tests/valid/Switch_Valid_11.while
int f(int c) {
    int ret = 0;
    switch(c) {
        case 1:
            ret = 1;
            break;
        case 2:
            ret = 2;
        default:
            ret = 3;
    }

    return ret;
}

void main() {
    print f(1);
}
