subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_22.while
int f(int x) {
    for(int i=0;x;i=i+1) {
    	   x = x + 1;
    }
    return x;
}